// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom render 1`] = `
<View
  renderToHardwareTextureAndroid={true}
  style={
    Object {
      "marginBottom": 0,
      "marginLeft": 0,
      "marginRight": 0,
      "marginTop": 0,
    }
  }
>
  <View>
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "borderRadius": 2,
                "borderWidth": 1,
                "flexDirection": "row",
              },
              false,
              Object {
                "borderColor": undefined,
              },
              Object {
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "width": undefined,
              },
            ]
          }
        >
          <TextInput
            editable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#D7D7D7"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "height": 58.971428571428575,
                "paddingLeft": 18.428571428571427,
                "textAlign": "left",
              }
            }
            value=""
          />
          <View
            style={
              Object {
                "paddingLeft": 6.142857142857142,
                "paddingRight": 18.428571428571427,
              }
            }
          >
            <SvgMock
              height={31.428571428571427}
              name="downarrow"
              width={31.428571428571427}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          }
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`renders correctly with default props 1`] = `
<View
  renderToHardwareTextureAndroid={true}
  style={
    Object {
      "marginBottom": 0,
      "marginLeft": 0,
      "marginRight": 0,
      "marginTop": 0,
    }
  }
>
  <View>
    <View>
      <View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "borderRadius": 2,
                "borderWidth": 1,
                "flexDirection": "row",
              },
              false,
              Object {
                "borderColor": undefined,
              },
              Object {
                "marginBottom": 0,
                "marginLeft": 0,
                "marginRight": 0,
                "marginTop": 0,
                "width": undefined,
              },
            ]
          }
        >
          <TextInput
            editable={false}
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="placeholder"
            placeholderTextColor="#D7D7D7"
            style={
              Object {
                "color": "#000",
                "flex": 1,
                "height": 58.971428571428575,
                "paddingLeft": 18.428571428571427,
                "textAlign": "left",
              }
            }
            value=""
          />
          <View
            style={
              Object {
                "paddingLeft": 6.142857142857142,
                "paddingRight": 18.428571428571427,
              }
            }
          >
            <SvgMock
              height={31.428571428571427}
              name="downarrow"
              width={31.428571428571427}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          }
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`renders correctly with disabled & custom height 1`] = `
<View
  renderToHardwareTextureAndroid={true}
  style={
    Object {
      "marginBottom": 0,
      "marginLeft": 0,
      "marginRight": 0,
      "marginTop": 0,
    }
  }
>
  <View>
    <View>
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#D7D7D7",
              "borderRadius": 2,
              "flexDirection": "row",
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "width": undefined,
            }
          }
        >
          <TextInput
            editable={false}
            placeholder="placeholder"
            placeholderTextColor="#D7D7D7"
            style={
              Object {
                "flex": 1,
                "height": 58.971428571428575,
                "paddingLeft": 18.428571428571427,
                "textAlign": "left",
              }
            }
          />
          <View
            style={
              Object {
                "paddingLeft": 6.142857142857142,
                "paddingRight": 18.428571428571427,
              }
            }
          >
            <SvgMock
              height={20}
              name="downarrow"
              width={20}
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
          }
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": "100%",
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;
